--- a/styles/Astar.css
+++ b/styles/Astar.css
@@ -1,55 +1,38 @@
-:root{
-    --main-style-black : rgb(42, 45, 67);
-    --main-style-dark : rgb(83, 85, 116);
-    --main-style-blue : rgb(127, 73, 196);
-    --main-style-dark-blue : rgb(69, 37, 107);
-    --main-style-pink : rgb(255, 132, 232);
-    --main-style-light-pink : rgb(255, 169, 231);
+canvas{
+    margin-top: 10px;
+    background-color: var(--main-style-black);
+    border: dashed var(--main-style-blue);
 }
 
-@font-face {
-    font-family: "Workbench", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-            "BLED" 0,
-            "SCAN" -14;
-}
-
-header {
-    display: flex;
-    margin-top: 0;
-    outline: solid var(--main-style-blue);
-    height: 75px;
-    background-color: var(--main-style-dark);
-    padding: 0px 0px 0px;
+.tool-buttons{
+    padding: 10px;
+    display: inline-block;
     align-content: center;
     justify-content: center;
 }
 
-.header-context{
-    border-left: solid;
-    border-right: solid;
-    font-family: "Workbench", sans-serif;
-    color: var(--main-style-pink);
+.canvas-panel{
+    align-content: center;
+    justify-content: center;
+    display: grid;
 }
 
-button {
+.inBody-button{
     margin: 10px;
-    border-right: solid;
-    border-left: solid;
+    border-right: dashed;
+    border-left: dashed;
     border-bottom: none;
     border-top: none;
-    background-color: var(--main-style-dark);
+    background-color: var(--main-style-black);
     outline-color: var(--main-style-blue);
     font-family: "Workbench", sans-serif;
     font-size: 200%;
     color: var(--main-style-pink);
 }
 
-button:hover{
-    border-right: solid;
-    border-left: solid;
+.inBody-button:hover{
+    border-right: dashed;
+    border-left: dashed;
     border-bottom: none;
     border-top: none;
     background-color: var(--main-style-light-pink);
@@ -57,35 +40,4 @@ button:hover{
     font-family: "Workbench", sans-serif;
     font-size: 200%;
     color: var(--main-style-dark);
-}
-
-body{
-    background-color: var(--main-style-black);
-}
-
-canvas{
-    margin-top: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: var(--main-style-black);
-}
-
-footer {
-    display: flex;
-    margin-top: 0;
-    outline: solid var(--main-style-blue);
-    height: 75px;
-    background-color: var(--main-style-dark);
-    padding: 0px 0px 0px;
-    align-content: center;
-    justify-content: center;
-}
-
-.footer-context{
-    border-left: solid var(--main-style-blue);
-    border-right: solid var(--main-style-blue);
-    font-family: "Workbench", sans-serif;
-    color: var(--main-style-pink);
-    justify-content: center;
-    align-content: center;
 }
