--- a/styles/style.css
+++ b/styles/style.css
@@ -22,24 +22,27 @@ header {
     outline: solid var(--main-style-blue);
     height: 75px;
     background-color: var(--main-style-dark);
-    padding: 0px 0px 0px;
     align-content: center;
     justify-content: center;
 }
 
 .header-context{
-    border-left: solid;
-    border-right: solid;
+    border-left: dashed;
+    border-right: dashed;
     font-family: "Workbench", sans-serif;
     color: var(--main-style-pink);
 }
 
-button {
+a {
+    cursor: pointer;
+    text-decoration: none;
     margin: 10px;
-    border-right: solid;
-    border-left: solid;
+    border-right: dashed;
+    border-left: dashed;
     border-bottom: none;
     border-top: none;
+    align-content: center;
+    padding: 10px;
     background-color: var(--main-style-dark);
     outline-color: var(--main-style-blue);
     font-family: "Workbench", sans-serif;
@@ -47,9 +50,9 @@ button {
     color: var(--main-style-pink);
 }
 
-button:hover{
-    border-right: solid;
-    border-left: solid;
+a:hover{
+    border-right: dashed;
+    border-left: dashed;
     border-bottom: none;
     border-top: none;
     background-color: var(--main-style-light-pink);
@@ -63,16 +66,13 @@ body{
     background-color: var(--main-style-black);
 }
 
-canvas{
-    margin-top: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: var(--main-style-black);
-}
-
 footer {
+    font-size: 75%;
+    position: absolute;
     display: flex;
-    margin-top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     outline: solid var(--main-style-blue);
     height: 75px;
     background-color: var(--main-style-dark);
@@ -82,8 +82,7 @@ footer {
 }
 
 .footer-context{
-    border-left: solid var(--main-style-blue);
-    border-right: solid var(--main-style-blue);
+    text-align: center;
     font-family: "Workbench", sans-serif;
     color: var(--main-style-pink);
     justify-content: center;
