--- a/styles/style.css
+++ b/styles/style.css
@@ -88,3 +88,28 @@ footer {
     justify-content: center;
     align-content: center;
 }
+
+.inBody-button{
+    margin: 10px;
+    border-right: dashed;
+    border-left: dashed;
+    border-bottom: none;
+    border-top: none;
+    background-color: var(--main-style-black);
+    outline-color: var(--main-style-blue);
+    font-family: "Workbench", sans-serif;
+    font-size: 200%;
+    color: var(--main-style-pink);
+}
+
+.inBody-button:hover{
+    border-right: dashed;
+    border-left: dashed;
+    border-bottom: none;
+    border-top: none;
+    background-color: var(--main-style-light-pink);
+    outline-color: var(--main-style-pink);
+    font-family: "Workbench", sans-serif;
+    font-size: 200%;
+    color: var(--main-style-dark);
+}
