--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,15 @@
             "SCAN" -14;
 }
 
+@keyframes textFlicker {
+    from{
+        text-shadow: 3px 0 0 var(--main-style-light-pink);
+    }
+    to{
+        text-shadow: 2px 1px 2px var(--main-style-light-pink);
+    }
+}
+
 @keyframes interactiveFlicker {
     from{
         text-shadow: 3px 0 0 var(--main-style-light-pink);
@@ -50,6 +59,11 @@ header {
     background-color: var(--main-style-dark);
     align-content: center;
     justify-content: center;
+}
+
+html{
+    font-family: "Workbench", sans-serif;
+
 }
 
 .header-context{
@@ -94,35 +108,6 @@ a:hover{
     animation-direction: alternate;
 }
 
-.showRanCol{
-    color: rgb(255, 132, 232);
-    font-size: 200%;
-}
-/* for chrome/safari */
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 10px;
-    height: 30px;
-    background:rgb(255, 132, 232);
-    cursor: pointer;
-    border: 5px rgb(255, 132, 232);
-    border-radius: 4px;
-}
-
-/* for firefox */
-.slider::-moz-range-thumb {
-    width: 10px;
-    height: 20px;
-    background: var(--main-style-dark);
-    cursor: pointer;
-    border: 5px var(--main-style-dark);
-    border-radius: 4px;
-}
-body{
-    background-color: var(--main-style-black);
-}
-
 footer {
     font-size: 75%;
     position: absolute;
@@ -157,6 +142,7 @@ button{
     font-family: "Workbench", sans-serif;
     font-size: 200%;
     color: var(--main-style-pink);
+
     animation-duration: 0.01s;
     animation-name: interactiveFlicker;
     animation-iteration-count: infinite;
@@ -202,17 +188,55 @@ button:hover{
     font-size: 200%;
     color: var(--main-style-dark);
 }
+
 .slider {
     -webkit-appearance: none;
     width: 200px;
-    height: 15px;
-    background: var(--main-style-dark);
+    height: 5px;
+    background: var(--main-style-blue);
     outline: none;
     border: 7px rgb(255, 132, 232);
-    border-radius: 8px;
+    border-radius: 0px;
+}
+
+.showRanCol{
+    color: var(--main-style-pink);
+    font-size: 200%;
+
+    animation-duration: 0.01s;
+    animation-name: textFlicker;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+/* for chrome/safari */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 30px;
+    background:var(--main-style-pink);
+    cursor: pointer;
+    border: 5px var(--main-style-pink);
+    border-radius: 0px;
+}
+
+/* for firefox */
+.slider::-moz-range-thumb {
+    width: 10px;
+    height: 5px;
+    background: var(--main-style-light-pink);
+    cursor: pointer;
+    border: 5px var(--main-style-light-pink);
+}
+
+
+
+body{
+    background-color: var(--main-style-black);
 }
 
 canvas{
+
     margin-top: 10px;
     background-color: var(--main-style-black);
     border: dashed var(--main-style-blue);
@@ -226,6 +250,7 @@ canvas{
 .tool-buttons-canvas{
     padding: 10px;
     display: inline-grid;
+    grid-template-rows: 2fr;
     align-content: center;
     justify-content: center;
 }
@@ -239,4 +264,13 @@ canvas{
     align-content: center;
     justify-content: center;
     display: flex;
+}
+
+.inBudy-simpleContent{
+    font-family: "Workbench", sans-serif;
+    color: var(--main-style-pink);
+    animation-duration: 0.01s;
+    animation-name: textFlicker;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
