--- a/styles/style.css
+++ b/styles/style.css
@@ -250,6 +250,7 @@ canvas{
 }
 
 .tool-buttons-canvas{
+    float: left;
     padding: 10px;
     display: inline-grid;
     grid-template-rows: 2fr;
